Ma ma ma map city

--- a/www/index.html
+++ b/www/index.html
@@ -23,8 +23,10 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUauNYGfdSvlHTDKeOs0hEPmDyca85G30&amp;sensor=false"
-      type="text/javascript"></script>
+    <script src="js/libs/lodash.js"></script>
+    <script src="js/libs/angular-google-maps.min.js"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
   </head>
   <body ng-app="starter">
     <!--
