--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,11 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+
+    <!-- i added it here -ERIC. -->
+    <script src="js/ng-cordova.min.js"></script>
+    
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
