--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-
+    
+    <script src="js/ng-cordova.min.js"></script>
     <script src="js/libs/lodash.js"></script>
     <script src="js/libs/angular-google-maps.min.js"></script>
     <script src="//rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
