--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,8 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     
-    <script src="js/ng-cordova.min.js"></script>
-    <script src="js/libs/lodash.js"></script>
-    <script src="js/libs/angular-google-maps.min.js"></script>
-    <script src="//rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
+    <script src="js/libs/ng-cordova.min.js"></script>
+    <script src="js/libs/ng-map.min.js"></script>
 
 
 <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
